separarted home less file by section, polished smooth scrolling by sections"

--- a/index.html
+++ b/index.html
@@ -66,14 +66,13 @@
 
 			<section id='collections'>
 				<!-- <h2 class="section_title">Our Collections</h2> -->
-				<div id='collections'>
-					<a class='collections_image' id="collections_image_1" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=simple-shop-header-name&listing_id=545886983&section_id=15959220">Engagement Rings</a>			
+					<a class='collections_image' id="collections_image_1" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=simple-shop-header-name&listing_id=545886983&section_id=15959220"><div class="overlay"><p>Collection One</p></div>
+					</a>			
 					<div id='collections_right'>
-						<a class='collections_image' id="collections_image_2" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=simple-shop-header-name&listing_id=545886983&section_id=15959222">Men's Collection</a>
+						<a class='collections_image' id="collections_image_2" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=simple-shop-header-name&listing_id=545886983&section_id=15959222"><div class="overlay"><p>Collection Two</p></div></a>
 				
-						<a class='collections_image' id="collections_image_3" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=simple-shop-header-name&listing_id=545886983&section_id=16036813">Unique Vintage</a>
+						<a class='collections_image' id="collections_image_3" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=simple-shop-header-name&listing_id=545886983&section_id=16036813"><div class="overlay"><p>Collection Three</p></div></a>
 					</div>
-				</div>
 			</section>
 
 
@@ -159,21 +158,15 @@
 				</div>
 			</section>
 
-				<!-- Newsletter -->
+				
 
-			<section class="newsletter newsletter_image" style="background-image:url(images/newsletter.jpg)">
-				<div class="newsletter_content">
-					<h1>subscribe for a 20% discount</h1>
-					<form action="#">
-						<input type="email" class="newsletter_input" required="required" placeholder="E-mail here">
-						<button type="submit" class="button">subscribe</button>
-					</form>
-					<p class="newsletter_text">One time offer. Offer may not be combined with any other sale, promotion, discount, code, or coupon.</p>
-				</div>
-			</section>
 			<section>
 				<div id='instafeed'></div>
 			</section>
+
+			<!-- Newsletter -->
+			
+			
 		</article>
 	</main>
 
@@ -182,6 +175,16 @@
 	<!-- Footer -->
 
 	<footer>
+		<section class="newsletter newsletter_image" style="background-image:url(images/newsletter.jpg)">
+			<div class="newsletter_content">
+				<h1>subscribe for a 20% discount</h1>
+				<form action="#">
+					<input type="email" class="newsletter_input" required="required" placeholder="E-mail here">
+					<button type="submit" class="button">subscribe</button>
+				</form>
+				<p class="newsletter_text">One time offer. Offer may not be combined with any other sale, promotion, discount, code, or coupon.</p>
+			</div>
+		</section>
 		<a href="#">Ruby's Vintage Jewelry</a>
 		<nav>
 			<ul>
