added js to insta gallery, styled layout footer/newsletter

--- a/index.html
+++ b/index.html
@@ -144,8 +144,12 @@
 
 				</div>
 			</section>	
+
 			<section id='instaCont'>
-				<div id='instafeed'></div>
+				<div id='instafeed'>
+				</div>
+				<p id='instarrow1'class='arrow'>></p>
+				<p id='instarrow2'class='arrow'><</p>
 			</section>
 			
 			
@@ -157,7 +161,7 @@
 	<!-- Footer -->
 
 	<footer>
-		<div class="newsletter_content">
+		<div class="newsletter">
 			<h1>subscribe for a 20% discount</h1>
 			<form action="#">
 				<input type="email" class="newsletter_input" required="required" placeholder="E-mail here">
@@ -166,7 +170,7 @@
 			<p class="newsletter_text">One time offer. Offer may not be combined with any other sale, promotion, discount, code, or coupon.</p>
 		</div>
 
-		<section>
+		<section class='footer_nav'>
 			<a href="#">Ruby's Vintage Jewelry</a>
 			<nav>
 				<ul>
