--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 				<li><a href="about.php">about</a></li>
 				<li><a href="https://www.etsy.com/shop/rubysvintagejewelry?ref=condensed_trust_header_title_items" target="_blank">store</a></li>
 				<li><a href="contact.php">contact</a></li>
-				<li><a href=""><img class='search_icon' src="./images/shopping_cart.png" alt=""></a></li>
-				<li><a href=""><img class='search_icon' src="./images/search.png" alt=""></a></li>  
+				<li><a href=""><img class='nav_icon' src="./images/shopping_cart.png" alt=""></a></li>
+				<li><a href=""><img class='nav_icon' src="./images/search.png" alt=""></a></li>  
 			</ul>
 		</nav>
-		<div id="burger_container" class="menu_mm"><div></div><div></div><div></div></div>
+		<div id="burger_button" class="menu_mm"><div></div><div></div><div></div></div>
 	</header>
 
 
@@ -36,7 +36,6 @@
 	<aside>
 		<div id="menu" class="menu_mm">
 			<div id="menu_close_container"><div id="menu_close"><div></div><div></div></div></div>
-			<h1 id="burger_logo" class="menu_mm"><img id="burger_logo_img" src='images/logo.jpg'></h1>
 			<nav id="menu_nav">
 				<ul>
 					<li><a href="#">home</a></li>
@@ -50,14 +49,14 @@
 
 	<main>
 		<article>
-			<!-- <div id="spacer"></div> -->
 			<!-- Home Banner -->
 
 			<section id="home_container">
 				<div>
-						<h1>SPRING SALE</h1>
-						<h2>20% OFF DIAMOND STYLES</h2>
-						<a class="button" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=condensed_trust_header_title_items">Shop Now</a>
+					<h1 class='comp_header'>SPRING SALE</h1>
+					<h1 class='mobile_header'>SPRING<br>SALE</h1>
+					<h2>20% OFF DIAMOND STYLES</h2>
+					<a class="button" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=condensed_trust_header_title_items">Shop Now</a>
 				</div>
 			</section>
 
