further layout changes for mobile

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
 				<div>
 					<h1 class='comp_header'>SPRING SALE</h1>
 					<h1 class='mobile_header'>SPRING<br>SALE</h1>
-					<h2>20% OFF DIAMOND STYLES</h2>
 					<a class="button" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=condensed_trust_header_title_items">Shop Now</a>
 				</div>
 			</section>
@@ -78,32 +77,30 @@
 				<!-- New Arrivals -->
 
 			<section id="arrivals">
-				<!-- <h1 class="section_title">new arrivals</h1> -->
-
 				<!-- Product -->
 				<a class="product" href="#">
 					<div id='product_1' class="product_image"></div>
-					<div class="product_info product_name">
+					<div class="product_info">
 						<span>Sunstone Ring</span> 
-						<p class="product_price">$145.00</p>
+						<p>$1450.00</p>
 					</div>
 				</a>
 
 				<!-- Product -->
 				<a class="product" href="https://www.etsy.com/listing/682051286/vintage-victorian-18k-white-gold?ref=shop_home_active_24&frs=1">
 					<div id='product_2' class="product_image"></div>
-					<div class="product_info product_name">
+					<div class="product_info">
 						<span>Victorian</span> <span>White Gold</span> <span>Diamond Ring</span>
-						<p class="product_price">$1,350.00</p>
+						<p>$1,350.00</p>
 					</div>
 				</a>
 
 				<!-- Product -->
 				<a class="product" href="https://www.etsy.com/listing/682056282/substantial-natural-star-sapphire-and?ref=shop_home_active_23&frs=1">
 					<div id='product_3' class="product_image"></div>
-					<div class="product_info product_name">
+					<div class="product_info">
 						<span>White Gold</span> <span>Star Saphire Ring</span>
-						<p class="product_price">$1,285.00</p>
+						<p>$1,285.00</p>
 					</div>					
 				</a>
 			</section>
@@ -111,7 +108,7 @@
 
 				<!-- Extra -->
 			<section id="extra">
-				<div id="extra_text">Native American Collection</div>
+				<p>Native American Collection</p>
 				<a class="button" href="checkout.php">shop now</a>
 			</section>
 
