cont'd mobile first reformatting of sections, offers, testimonials, and instafeed. including media queries for hidef and 4k devices.

--- a/index.html
+++ b/index.html
@@ -49,104 +49,85 @@
 
 	<main>
 		<article>
+			
 			<!-- Home Banner -->
-
-			<section id="home_container">
-				<div>
-					<h1 class='comp_header'>SPRING SALE</h1>
-					<h1 class='mobile_header'>SPRING<br>SALE</h1>
-					<a class="button" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=condensed_trust_header_title_items">Shop Now</a>
+			<section class="banner">
+				<div class='banner_content'>
+					<h1>SPRING SALE</h1>
+					<a class='button' href="https://www.etsy.com/shop/rubysvintagejewelry?ref=condensed_trust_header_title_items">Shop Now</a>
 				</div>
 			</section>
 
 			<!-- Collections -->
-			
+			<section class='collections'>
+					<a class='collections_image' id="coll_one" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=simple-shop-header-name&listing_id=545886983&section_id=15959220">
+					</a>
 
-			<section id='collections'>
-				<!-- <h2 class="section_title">Our Collections</h2> -->
-					<a class='collections_image' id="collections_image_1" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=simple-shop-header-name&listing_id=545886983&section_id=15959220"><div class="overlay"><p>Collection One</p></div>
-					</a>			
-					<div id='collections_right'>
-						<a class='collections_image' id="collections_image_2" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=simple-shop-header-name&listing_id=545886983&section_id=15959222"><div class="overlay"><p>Collection Two</p></div></a>
+					<a class='collections_image' id="coll_two" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=simple-shop-header-name&listing_id=545886983&section_id=15959222">
+					</a>
 				
-						<a class='collections_image' id="collections_image_3" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=simple-shop-header-name&listing_id=545886983&section_id=16036813"><div class="overlay"><p>Collection Three</p></div></a>
-					</div>
+					<a class='collections_image' id="coll_three" href="https://www.etsy.com/shop/rubysvintagejewelry?ref=simple-shop-header-name&listing_id=545886983&section_id=16036813">
+					</a>
 			</section>
 
-
-				<!-- New Arrivals -->
-
-			<section id="arrivals">
-				<!-- Product -->
+			<!-- New Arrivals -->
+			<section class="arrivals">
 				<a class="product" href="#">
-					<div id='product_1' class="product_image"></div>
+					<img class="product_image" src="./images/product_3_small.jpg">
 					<div class="product_info">
-						<span>Sunstone Ring</span> 
+						<p>Art Deco Sunstone Ring</p> 
 						<p>$1450.00</p>
 					</div>
 				</a>
 
-				<!-- Product -->
-				<a class="product" href="https://www.etsy.com/listing/682051286/vintage-victorian-18k-white-gold?ref=shop_home_active_24&frs=1">
-					<div id='product_2' class="product_image"></div>
+				<a class="product" href="#">
+					<img class="product_image" src="./images/product_1_small.jpg">
 					<div class="product_info">
-						<span>Victorian</span> <span>White Gold</span> <span>Diamond Ring</span>
+						<p>Victorian White Gold Diamond Ring</p>
 						<p>$1,350.00</p>
 					</div>
 				</a>
 
-				<!-- Product -->
-				<a class="product" href="https://www.etsy.com/listing/682056282/substantial-natural-star-sapphire-and?ref=shop_home_active_23&frs=1">
-					<div id='product_3' class="product_image"></div>
+				<a class="product" href="#">
+					<img class="product_image" src="./images/product_2_small.jpg">
 					<div class="product_info">
-						<span>White Gold</span> <span>Star Saphire Ring</span>
+						<p>White Gold Star Saphire Ring</p>
 						<p>$1,285.00</p>
 					</div>					
 				</a>
 			</section>
 
-
-				<!-- Extra -->
-			<section id="extra">
+			<section class="offer">
 				<p>Native American Collection</p>
 				<a class="button" href="checkout.php">shop now</a>
 			</section>
 
 				<!-- Testimonials -->
 
-			<section id="testimonials">
-				<!-- <h1 class="section_title">testimonials</h1> -->
-
-				<!-- Testimonials Slider -->
+			<section class="testimonials">
 				<div class="owl-carousel owl-theme test_slider">
-
-					<!-- Testimonial Item -->
 					<div class="owl-item">
-						<div class="test_text">“Outstanding customer service. When I inquired about this ring, they answered all my questions and went above and beyond to make sure I was happy with my decision. I ordered on a Friday and it was in my mailbox Monday. I highly recommend this seller.”</div>
-						<div class="test_name">Dominique H.</div>
+						<p class="test_text">“Outstanding customer service. When I inquired about this ring, they answered all my questions and went above and beyond to make sure I was happy with my decision. I ordered on a Friday and it was in my mailbox Monday. I highly recommend this seller.”</p>
+						<p class="test_name">Dominique H.</p>
 					</div>
 
-					<!-- Testimonial Item -->
 					<div class="owl-item">
-						<div class="test_text">“A wonderful buying experience. My rare, unique item arrived ahead of schedule, packaged with care, and looked exactly as described. Communication with them was amazing, they were always available when I had a question. I'll definitely buy from Ruby's Vintage again.”</div>
-						<div class="test_name">Scott W.</div>
+						<p class="test_text">“A wonderful buying experience. My rare, unique item arrived ahead of schedule, packaged with care, and looked exactly as described. Communication with them was amazing, they were always available when I had a question. I'll definitely buy from Ruby's Vintage again.”</p>
+						<p class="test_name">Scott W.</p>
 					</div>
 
-					<!-- Testimonial Item -->
 					<div class="owl-item">
-						<div class="test_text">“I have purchased many pieces from Ruby's Vintage over the years and each is a truly unique treasure. I am not easily impressed, but the fast shipping, and excellent communication of Ruby's Vintage have made me a regular customer. I highly recommend them”</div>
-						<div class="test_name">Sandra G.</div>
+						<p class="test_text">“I have purchased many pieces from Ruby's Vintage over the years and each is a truly unique treasure. I am not easily impressed, but the fast shipping, and excellent communication of Ruby's Vintage have made me a regular customer. I highly recommend them”</p>
+						<p class="test_name">Sandra G.</p>
 					</div>
-
 				</div>
 			</section>	
 
-			<section id='instaCont'>
-				<div id='instafeed'>
-				</div>
-				<p id='instarrow1'class='arrow'>></p>
-				<p id='instarrow2'class='arrow'><</p>
-			</section>
+			<!-- <section id='instaCont'> -->
+				<div id='instafeed'></div>
+				<!-- <p id='instarrow1'class='arrow'>></p>
+				<p id='instarrow2'class='arrow'><</p> -->
+			<!-- </section> -->
 			
 			
 		</article>
@@ -156,19 +137,18 @@
 
 	<!-- Footer -->
 
-	<footer>
-		<div class="newsletter">
+	<!-- <footer>
+		<section class="newsletter">
 			<h1>subscribe for a 20% discount</h1>
 			<form action="#">
 				<input type="email" class="newsletter_input" required="required" placeholder="E-mail here">
 				<button type="submit" class="button">subscribe</button>
 			</form>
-			<p class="newsletter_text">One time offer. Offer may not be combined with any other sale, promotion, discount, code, or coupon.</p>
-		</div>
+		</section>
 
-		<section class='footer_nav'>
-			<a href="#">Ruby's Vintage Jewelry</a>
-			<nav>
+		<!-- <section>
+			<nav class='footer_nav'>
+				<a id="nav_logo_img" href="index.php"></a>
 				<ul>
 					<li><a href="#">home</a></li>
 					<li><a href="about.php">about</a></li>
@@ -180,9 +160,9 @@
 				<li><a href="https://www.facebook.com/rubylayneandtiffany/"><i class="fa fa-facebook" aria hidden+"true"></i></a></li>
 				<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 			</ul>
-		</section>
-		<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made by Francois Boulou</p>
-	</footer>
+		</section> -->
+		<!-- <p class='copyright' >Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made by Francois Boulou</p>
+	</footer> -->
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
