styled instafeed mobile and laptop/desktop

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<!-- New Arrivals -->
 			<section class="arrivals">
 				<a class="product" href="#">
-					<img class="product_image" src="./images/product_3_small.jpg">
+					<img class="product_image" src="./images/product_3.jpg">
 					<div class="product_info">
 						<p>Art Deco Sunstone Ring</p> 
 						<p>$1450.00</p>
@@ -81,7 +81,7 @@
 				</a>
 
 				<a class="product" href="#">
-					<img class="product_image" src="./images/product_1_small.jpg">
+					<img class="product_image" src="./images/product_1.jpg">
 					<div class="product_info">
 						<p>Victorian White Gold Diamond Ring</p>
 						<p>$1,350.00</p>
@@ -89,7 +89,7 @@
 				</a>
 
 				<a class="product" href="#">
-					<img class="product_image" src="./images/product_2_small.jpg">
+					<img class="product_image" src="./images/product_2.jpg">
 					<div class="product_info">
 						<p>White Gold Star Saphire Ring</p>
 						<p>$1,285.00</p>
