alt attrs for imgs

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<li><a href="#">about</a></li>
 				<li><a href="#" target="_blank">store</a></li>
 				<li><a href="#">contact</a></li>
-				<li><a href="#"><img class='nav_icon' src="./images/shopping_cart.png" alt=""></a></li>
-				<li><a href="#"><img class='nav_icon' src="./images/search.png" alt=""></a></li>  
+				<li><a href="#"><img class='nav_icon' src="./images/shopping_cart.png" alt="shopping cart icon" ></a></li>
+				<li><a href="#"><img class='nav_icon' src="./images/search.png" alt="search button"></a></li>  
 			</ul>
 		</nav>
 		<div id="burger_button" class="menu_mm"><div></div><div></div><div></div></div>
@@ -74,7 +74,7 @@
 				<!-- New Arrivals -->
 				<section class="arrivals">
 					<a class="product" href="#">
-						<img class="product_image" src="./images/product_3.jpg">
+						<img class="product_image" src="./images/product_3.jpg" alt="Art Deco Sunstone Ring">
 						<div class="product_info">
 							<p>Art Deco Sunstone Ring</p> 
 							<p>$1450.00</p>
@@ -82,7 +82,7 @@
 					</a>
 					
 					<a class="product" href="#">
-						<img class="product_image" src="./images/product_1.jpg">
+						<img class="product_image" src="./images/product_1.jpg" alt="Victorian White Gold Diamond Ring">
 						<div class="product_info">
 							<p>Victorian White Gold Diamond Ring</p>
 							<p>$1,350.00</p>
@@ -90,7 +90,7 @@
 					</a>
 					
 					<a class="product" href="#">
-						<img class="product_image" src="./images/product_2.jpg">
+						<img class="product_image" src="./images/product_2.jpg" alt=" White Gold Star Saphire Ring">
 						<div class="product_info">
 							<p>White Gold Star Saphire Ring</p>
 							<p>$1,285.00</p>
