--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
 			<section class="newsletter">
 				<h1>subscribe for a 20% discount</h1>
 				<form action="#">
-					<input type="email" class="newsletter_input" required="required" placeholder="E-mail here">
+					<label for="email"></label>
+					<input id="email" type="email" class="newsletter_input" required="required" placeholder="E-mail here">
 					<button type="submit" class="button">subscribe</button>
 				</form>
 			</section>
