--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
 			<section class="newsletter">
 				<h1>subscribe for a 20% discount</h1>
 				<form action="#">
-					<label for="email">Send us a message</label>
+					<label for="email">Send us a message
 					<input id="email" type="email" class="newsletter_input" required="required" placeholder="E-mail here">
+					</label>
 					<button type="submit" class="button">subscribe</button>
 				</form>
 			</section>
