--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 			<section class="newsletter">
 				<h1>subscribe for a 20% discount</h1>
 				<form action="#">
-					<label for="email">Send us a message
-					<input id="email" type="email" class="newsletter_input" required="required" placeholder="E-mail here">
+					<label for="contact_email">Send us a message
+					<input id="contact_email" type="email" class="newsletter_input" required="required" placeholder="E-mail here">
 					</label>
 					<button type="submit" class="button">subscribe</button>
 				</form>
