--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Header -->
 	
 	<header id="header">
-		<a class="nav_logo_img" href="index.php"></a>
+		<a class="nav_logo_img" href="index.php"><img src="images/logo.png" alt="jewelry logo"></a>
 		<nav class="nav">
 			<ul>
 				<li><a href="#">home</a></li>
