aria labels for social media icons, and accessibility on footer logo

--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 			</section>
 			
 			<section class="footer_nav">
-				<a class="nav_logo_img footer_logo" href="#"></a>
+				<a class="nav_logo_img footer_logo" href="#"><img src="images/logo.png" alt="jewelry logo"></a>
 				<ul class="social">
-					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-					<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+					<li><a href="#" aria-label="facebook link"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+					<li><a href="#" aria-label="instagram link"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 				</ul>
 			</section>
 			
