added aria label to input newsletter

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 			<section class="newsletter">
 				<h1>subscribe for a 20% discount</h1>
 				<form action="#">
-					<label for="contact_email">Send us a message
-					<input id="contact_email" type="email" class="newsletter_input" required="required" placeholder="E-mail here">
-					</label>
+					
+					<input aria-label="email input" id="contact_email" type="email" class="newsletter_input" required="required" placeholder="E-mail here">
+					
 					<button type="submit" class="button">subscribe</button>
 				</form>
 			</section>
