--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<section aria-label="landing banner" class="banner">
 				<div class='banner_content'>
 					<h1>SPRING SALE</h1>
-					<a class='button' href="https://www.etsy.com/shop/rubysvintagejewelry?ref=condensed_trust_header_title_items">Shop Now</a>
+					<a aria-label="spring sale" class='button' href="https://www.etsy.com/shop/rubysvintagejewelry?ref=condensed_trust_header_title_items">Shop Now</a>
 				</div>
 			</section>
 			
