replaced arrows with dots for instafeed"

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 src="assets/images/product_3.jpg"
                 alt="Art Deco Sunstone Ring"
               />
-              <div class="">
+              <div class="mt-3">
                 <p>Art Deco Sunstone Ring</p>
                 <p>$1450.00</p>
               </div>
@@ -133,7 +133,7 @@
                 src="assets/images/product_1.jpg"
                 alt="Victorian White Gold Diamond Ring"
               />
-              <div class="">
+              <div class="mt-3">
                 <p>Victorian White Gold Diamond Ring</p>
                 <p>$1,350.00</p>
               </div>
@@ -144,7 +144,7 @@
                 src="assets/images/product_2.jpg"
                 alt=" White Gold Star Saphire Ring"
               />
-              <div class="">
+              <div class="mt-3">
                 <p>White Gold Star Saphire Ring</p>
                 <p>$1,285.00</p>
               </div>
@@ -202,24 +202,13 @@
             </div>
           </div>
         </section>
-        <section class="instafeed-container">
+        <section id="instafeed-container">
           <div
             id="instafeed"
             class="d-inline-flex"
             aria-label="instagram feed"
           ></div>
-          <div class="">
-            <i
-              aria-label="left arrow"
-              id="gallery-left"
-              class="fa fa-arrow-left"
-            ></i>
-            <i
-              aria-label="right arrow"
-              id="gallery-right"
-              class="fa fa-arrow-right"
-            ></i>
-          </div>
+          <div id="nav-dots"></div>
         </section>
       </article>
     </main>
