--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="collapse navbar-collapse" id="navbar">
         <div
-          class="navbar-nav text-center align-items-center justify-content-center mt-2 mt-lg-0"
+          class="navbar-nav text-center align-items-center justify-content-around mt-2 mt-lg-0"
         >
           <a class="nav-item nav-link" href="#"
             >Home <span class="sr-only">(current)</span></a
