--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="collapse navbar-collapse" id="navbar">
         <div
-          class="navbar-nav text-center align-items-center justify-content-around mt-2 mt-lg-0"
+          class="navbar-nav text-center align-items-center justify-content-center justify-content-lg-around mt-2 mt-lg-0"
         >
           <a class="nav-item nav-link" href="#"
             >Home <span class="sr-only">(current)</span></a
@@ -299,7 +299,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript" src="./assets/js/custom.js"></script>
     <script type="text/javascript" src="./assets/js/instafeed.min.js"></script>
+    <script type="text/javascript" src="./assets/js/custom.js"></script>
   </body>
 </html>
